--- a/YetAnotherConsoleTables.CommonConverters/YetAnotherConsoleTables.CommonConverters.csproj
+++ b/YetAnotherConsoleTables.CommonConverters/YetAnotherConsoleTables.CommonConverters.csproj
@@ -10,10 +10,15 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>console;table;output;consoletable;text-table</PackageTags>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="YetAnotherConsoleTables" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" Visible="false" />
   </ItemGroup>
 
 </Project>
