--- a/YetAnotherConsoleTables.CommonConverters/YetAnotherConsoleTables.CommonConverters.csproj
+++ b/YetAnotherConsoleTables.CommonConverters/YetAnotherConsoleTables.CommonConverters.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>yakivyusin</Authors>
     <Copyright>Copyright 2023</Copyright>
     <Description>The set of common table member converters for the YetAnotherConsoleTables library.</Description>
@@ -11,6 +11,7 @@
     <PackageTags>console;table;output;consoletable;text-table</PackageTags>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>Added Enumerable converters: First, Last, Join.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
